--- a/src/index.html
+++ b/src/index.html
@@ -11,5 +11,8 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/form.html"></include>
+    <div class="js-palette"></div>
+
+    <script src="./index.js" type="module"></script>
   </body>
 </html>
