--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/form.html"></include>
-    <div class="js-palette"></div>
+    <div class="js-test-hbs"></div>
 
     <script src="./index.js" type="module"></script>
   </body>
