--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="./images/title-js.svg" />
-    <title>Page title</title>
+    <title>Home Work11</title>
     <link rel="stylesheet" href="./sass/index.scss" />
     <script type="module" src="./index.js"></script>
   </head>
   <body>
     <!-- ❗️❗️❗️ Add partials like so for every page -->
     <include src="./partials/form.html"></include>
-    <div class="js-gallery-hbs"></div>
+    <div class="gallery js-gallery-hbs"></div>
 
     <script src="./index.js" type="module"></script>
   </body>
